[package]
name = "treasure_hunt"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "treasure_hunt"

[dependencies]
actix-web = {version = "4.4.0", features = ["openssl"]}
diesel = "2.1.1"
env = "0.0.0"
serde = {version = "1.0.188", features = ["derive"]}
openssl = "0.10"